--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "babel-jest": "^26.3.0",
     "eslint": "^7.10.0",
     "jest": "^26.4.2"
+  },
+  "dependencies": {
+    "g": "^2.0.1",
+    "npm": "^7.5.3"
   }
 }
